<resources>
    <string name="app_name">Food Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favourites">Favourites</string>
    <string name="joke">Joke</string>
    <string name="fv_recipes">Favourite Recipes</string>
    <string name="food_joke">Food Joke</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="_100">100</string>
    <string name="vegan">Vegan</string>
    <string name="main_course">Main Course</string>
    <string name="main_vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="diet_type">Diet Type</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">BreakFast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="Sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="snack">Snack</string>
    <string name="fingerfood">FingerFood</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="delete_all">Delete All</string>
</resources>