<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.example.foodrecipes.mainActivityFragments.recipesFrag.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/favouriteRecipesFragment"
        android:name="com.example.foodrecipes.mainActivityFragments.favouriteRecipesFrag.FavouriteRecipesFragment"
        android:label="@string/fv_recipes"
        tools:layout="@layout/fragment_favourite_recipes" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.example.foodrecipes.mainActivityFragments.foodJokeFrag.FoodJokeFragment"
        android:label="@string/food_joke"
        tools:layout="@layout/fragment_food_joke" />
</navigation>